--- a/tags/view/index.html
+++ b/tags/view/index.html
@@ -21,7 +21,7 @@
   
   
   
-  <link rel="canonical" href="http://jonathanwayy.xyz/tags/deep-learning/" />
+  <link rel="canonical" href="http://jonathanwayy.xyz/tags/view/" />
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -32,10 +32,10 @@
   <title>
        
        
-           deep learning | Jonathan`s Blog
+           view | Jonathan`s Blog
        
   </title>
-  <meta name="title" content="deep learning | Jonathan`s Blog">
+  <meta name="title" content="view | Jonathan`s Blog">
     
   
   <link rel="stylesheet" href="/font/iconfont.css">
@@ -43,8 +43,8 @@
 
 
   
-    <link href="http://jonathanwayy.xyz/tags/deep-learning/index.xml" rel="alternate" type="application/rss+xml" title="Jonathan`s Blog" />
-    <link href="http://jonathanwayy.xyz/tags/deep-learning/index.xml" rel="feed" type="application/rss+xml" title="Jonathan`s Blog" />
+    <link href="http://jonathanwayy.xyz/tags/view/index.xml" rel="alternate" type="application/rss+xml" title="Jonathan`s Blog" />
+    <link href="http://jonathanwayy.xyz/tags/view/index.xml" rel="feed" type="application/rss+xml" title="Jonathan`s Blog" />
   
   
  
@@ -128,54 +128,12 @@
       		
 
 <div class="post-warp archive">
-    <h2 class="post-title" style="text-align:right;padding-bottom:2em">-&nbsp;Tags&nbsp;·&nbsp;deep learning&nbsp;-</h2>
+    <h2 class="post-title" style="text-align:right;padding-bottom:2em">-&nbsp;Tags&nbsp;·&nbsp;view&nbsp;-</h2>
     
     <article class="archive-item">
         <a href="http://jonathanwayy.xyz/2021/ldp4/" class="archive-item-link hvr-underline-from-center">炼丹杂记 -- Pytorch view 函数 RuntimeError 问题解决方案</a>
         <span class="archive-item-date">
             May 8, 2021
-        </span>
-    </article>
-    
-    <article class="archive-item">
-        <a href="http://jonathanwayy.xyz/2021/latex_acmtem/" class="archive-item-link hvr-underline-from-center">ACM 会议论文模板去除 ACM Reference Format 信息</a>
-        <span class="archive-item-date">
-            April 16, 2021
-        </span>
-    </article>
-    
-    <article class="archive-item">
-        <a href="http://jonathanwayy.xyz/2021/ldp3/" class="archive-item-link hvr-underline-from-center">炼丹杂记 -- GELU 激活函数的 Pytorch 实现</a>
-        <span class="archive-item-date">
-            March 25, 2021
-        </span>
-    </article>
-    
-    <article class="archive-item">
-        <a href="http://jonathanwayy.xyz/2021/ldp2/" class="archive-item-link hvr-underline-from-center">炼丹杂记 -- nvidia-smi指令报错：Failed to initialize NVML 解决方案</a>
-        <span class="archive-item-date">
-            January 22, 2021
-        </span>
-    </article>
-    
-    <article class="archive-item">
-        <a href="http://jonathanwayy.xyz/2020/ldp1/" class="archive-item-link hvr-underline-from-center">炼丹杂记 -- &#39; xsrf&#39; argument missing from POST 解决方法</a>
-        <span class="archive-item-date">
-            November 12, 2020
-        </span>
-    </article>
-    
-    <article class="archive-item">
-        <a href="http://jonathanwayy.xyz/2020/flower-book-notes/" class="archive-item-link hvr-underline-from-center">花书 阅读笔记</a>
-        <span class="archive-item-date">
-            October 5, 2020
-        </span>
-    </article>
-    
-    <article class="archive-item">
-        <a href="http://jonathanwayy.xyz/2020/dl-notes1/" class="archive-item-link hvr-underline-from-center">炼丹杂记 -- 饱和激活函数</a>
-        <span class="archive-item-date">
-            March 4, 2020
         </span>
     </article>
      
